# furne_backend_api

./: README.md  fastapi_app.py  pyproject.toml
furne_lite/: FURN-E_Lite.ipynb  README.md  requirements.txt
img_decomposition/: api.py  describe.py  detect.py  logger.py  main.py  search.py
img_to_prompts/: ImageProcessor.py  TextSearch_test.ipynb  requirements.txt
tests/: test_api.py  test_describe.py  test_detect.py  test_search.py
