[tool.poetry]
name = "img-decomposition-api"
version = "0.0.1"
description = "Backend for an app that generates an image, decomposes, classifies, and uncrops it, and searches for product information on identified objects"
authors = ["Christopher Carroll Smith <75859865+chriscarrollsmith@users.noreply.github.com>"]
readme = "README.md"
packages = [
  {include = "img_decomposition"},
  {include = "tests"}
]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
fastapi = "^0.104.1"
uuid = "^1.30"
modal-client = "^0.55.4028"
gitpython = "^3.1.40"
matplotlib = "^3.8.1"
opencv-python = "^4.8.1.78"
pillow = "^10.1.0"
psutil = "^5.9.6"
pyyaml = "^6.0.1"
requests = "^2.31.0"
scipy = "^1.11.3"
thop = "^0.1.1.post2209072238"
torch = "^2.1.0"
torchvision = "^0.16.0"
tqdm = "^4.66.1"
ultralytics = "^8.0.206"
transformers = "^4.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
